--- a/resources/leiningen/new/clj_cljs_weasel/index.html
+++ b/resources/leiningen/new/clj_cljs_weasel/index.html
@@ -1,10 +1,10 @@
 <html>
     <body>
         <script src="js/out/goog/base.js" type="text/javascript"></script>
-        <script src="js/{{name}}.js" type="text/javascript"></script>
+        <script src="js/{{sanitized}}.js" type="text/javascript"></script>
         <script type="text/javascript">
-          goog.require("{{name}}.connect");
-          goog.require("{{name}}.core");
+          goog.require("{{sanitized}}.connect");
+          goog.require("{{sanitized}}.core");
         </script>
     </body>
 </html>
