--- a/resources/leiningen/new/clj_cljs_weasel/index.html
+++ b/resources/leiningen/new/clj_cljs_weasel/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <script src="js/{{sanitized}}.js" type="text/javascript"></script>
+        <script src="../../target/cljsout/public/js/{{sanitized}}.js" type="text/javascript"></script>
         <script type="text/javascript">
           goog.require("{{sanitized}}.connect");
           goog.require("{{sanitized}}.core");
